tests/rosetta/out/Erlang/abundant-deficient-and-perfect-number-classifications.error
run: exit status 127
/tmp/abundant-deficient-and-perfect-number-classifications.erl:8:60: syntax error before: 'rem'
escript: There were compilation errors.
